<resources>
    <string name="app_name">Juno</string>
    <string name="all_day">All day</string>
    <string name="default_web_client_id">586442288097-uvwxyz1234567890abcdefghijklmnop.apps.googleusercontent.com</string>
    <string name="back">Back</string>
    <string name="more">More</string>
    <string name="my_checklists">My Checklists</string>
    <string name="no_checklists_found">No checklists found. Add one to get started!</string>
    <string name="add_new_checklist">Add new checklist</string>
    <string name="more_options">More options</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create_checklist">Create Checklist</string>
    <string name="checklist_title">Checklist Title</string>
    <string name="enter_checklist_title">Enter checklist title</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="add_item">Add new item</string>
    <string name="edit_checklist">Edit Checklist</string>
    <string name="checklist_details">Checklist Details</string>
    
    <!-- Calendar strings -->
    <string name="no_events">No Events</string>
    <string name="no_events_for_this_day">No events for this day</string>
    <string name="add_event">Add Event</string>
    <string name="action_settings">Settings</string>
</resources>